--- a/example.html
+++ b/example.html
@@ -46,9 +46,9 @@
   
   <link
     rel="stylesheet"
-    href="https://jsdev.arcgis.com/4.17/esri/themes/light/main.css"
+    href="https://js.arcgis.com/next/esri/themes/light/main.css"
   />
-  <script src="https://jsdev.arcgis.com/4.17/"></script>
+  <script src="https://js.arcgis.com/next/"></script>
 
   <script>
     var streamLayer;
